fixed things and remove dark mode

--- a/src/input.css
+++ b/src/input.css
@@ -4,13 +4,13 @@
 
 
 body {  
-    @apply dark:bg-dark transition duration-300;    
+    @apply transition duration-300;    
     font-family: 'Inter', sans-serif;
 }
 
 
 .navbar-fixed {
-    @apply fixed z-[9999] bg-white bg-opacity-80 backdrop-blur dark:bg-dark dark:bg-opacity-50  ;
+    @apply fixed z-[9999] bg-white bg-opacity-80 backdrop-blur;
     box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.1);
 }
 
@@ -49,9 +49,9 @@ body {
 }
 
 
-#dark-toggle:checked ~ label div.toggle-circle {
+/* #dark-toggle:checked ~ label div.toggle-circle {
     @apply translate-x-4;
-}
+} */
 
 
 #cursor {
